--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "mongoose": "^8.9.3",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.2",
+    "sweetalert2": "^11.15.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
